--- a/src/templates/R/03_csr.html
+++ b/src/templates/R/03_csr.html
@@ -40,31 +40,31 @@
             <div class="divclass mt-6">
                 <div>{{T0010}}. {{T0011}}</div>
                 <div>
-                    <input type="text" id="q2" name="q2" class="inputclass w-full" />
+                    <input type="text" id="q2" name="q2" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>{{T0012}}. {{T0013}}</div>
                 <div>
-                    <input type="text" id="q3" name="q3" class="inputclass w-full" />
+                    <input type="text" id="q3" name="q3" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>{{T0014}}. {{T0015}}</div>
                 <div>
-                    <input type="text" id="q4" name="q4" class="inputclass w-full" />
+                    <input type="text" id="q4" name="q4" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>{{T0016}}. {{T0017}}</div>
                 <div>
-                    <input type="text" id="q5" name="q5" class="inputclass w-full" />
+                    <input type="text" id="q5" name="q5" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>{{T0018}}. {{T0019}}</div>
                 <div>
-                    <input type="text" id="q6" name="q6" class="inputclass w-full" />
+                    <input type="text" id="q6" name="q6" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -72,25 +72,25 @@
             <div class="divclass mt-6">
                 <div>{{T0021}}. {{T0022}}</div>
                 <div>
-                    <input type="text" id="i1" name="i1" class="inputclass w-full" />
+                    <input type="text" id="i1" name="i1" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>{{T0023}}. {{T0024}}</div>
                 <div>
-                    <input type="text" id="i2" name="i2" class="inputclass w-full" />
+                    <input type="text" id="i2" name="i2" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>{{T0025}}. {{T0026}}</div>
                 <div>
-                    <input type="text" id="i3" name="i3" class="inputclass w-full" />
+                    <input type="text" id="i3" name="i3" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>{{T0027}}. {{T0028}}</div>
                 <div>
-                    <input type="text" id="i4" name="i4" class="inputclass w-full" />
+                    <input type="text" id="i4" name="i4" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
@@ -146,7 +146,7 @@
             <div class="divclass mt-6">
                 <div>{{T0050}}. {{T0051}}</div>
                 <div>
-                    <input type="text" id="j1" name="j1" class="inputclass w-full" />
+                    <input type="text" id="j1" name="j1" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -154,7 +154,7 @@
                 <div>{{T0052}}. {{T0053}}</div>
                 <div class="div4class">
                     <div class="flex items-center gap-4">
-                        <input type="text" id="j2" name="j2" class="inputclass w-full" />
+                        <input type="text" id="j2" name="j2" class="inputclass block w-full" />
                     </div>
                     <div class="flex items-center">
                         <input id="j2_na" type="checkbox" name="j2_na" value="{{j2_na-1}}" class="cbclass">
@@ -209,7 +209,7 @@
             <div class="divclass mt-6">
                 <div>{{T0067}}. {{T0068}}</div>
                 <div>
-                    <input type="text" id="j5" name="j5" class="inputclass w-full" />
+                    <input type="text" id="j5" name="j5" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -254,7 +254,7 @@
             <div class="divclass mt-6">
                 <div>{{T0084}}. {{T0085}}</div>
                 <div class="flex items-center gap-4">
-                    <input type="text" id="j7" name="j7" class="valueclass" />
+                    <input type="text" id="j7" name="j7" class="inputclass block" />
                     {{T0086}}
                 </div>
             </div>
@@ -287,7 +287,7 @@
             <div class="divclass mt-6">
                 <div>{{T0094}}. {{T0095}}</div>
                 <div>
-                    <input type="text" id="e1" name="e1" class="inputclass w-full" />
+                    <input type="text" id="e1" name="e1" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -296,7 +296,7 @@
             <div class="divclass mt-6">
                 <div>{{T0099}}. {{T0100}}</div>
                 <div>
-                    <input type="text" id="e2" name="e2" class="inputclass w-full" />
+                    <input type="text" id="e2" name="e2" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -355,21 +355,21 @@
             <div class="divclass mt-6">
                 <div>{{T0112}}. {{T0113}}</div>
                 <div>
-                    <input type="text" id="e5" name="e5" class="inputclass w-full" />
+                    <input type="text" id="e5" name="e5" class="inputclass block w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>{{T0114}}. {{T0115}}</div>
                 <div class="flex items-center gap-4">
-                    <input type="text" id="e6" name="e6" class="valueclass" /> {{T0116}}
+                    <input type="text" id="e6" name="e6" class="inputclass block" /> {{T0116}}
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>{{T0117}}. {{T0118}}</div>
                 <div>
-                    <input type="text" id="e7" name="e7" class="inputclass w-full" />
+                    <input type="text" id="e7" name="e7" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -409,7 +409,7 @@
                         <input id="e8-8" type="radio" value="{{e8-8}}" name="e8" class="valueclass" />
                         <label for="e8-8" class="labelclass">{{T0128}}</label>
                     </div>
-                    <input type="text" id="e8_other" name="e8_other" class="inputclass w-full" />
+                    <input type="text" id="e8_other" name="e8_other" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -497,7 +497,7 @@
             <div class="divclass mt-6">
                 <div>{{T0151}}. {{T0152}}</div>
                 <div class="flex items-center gap-4">
-                    <input type="text" id="e14" name="e14" class="valuclass" />
+                    <input type="text" id="e14" name="e14" class="inputclass block" />
                     {{T0153}}
                 </div>
             </div>
@@ -505,7 +505,7 @@
             <div class="divclass mt-6">
                 <div>{{T0154}}. {{T0155}}</div>
                 <div class="flex items-center gap-4">
-                    <input type="text" id="e15" name="e15" class="inputclass w-full" /> {{T0185}}
+                    <input type="text" id="e15" name="e15" class="inputclass block w-full" /> {{T0185}}
                 </div>
             </div>
 
