--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -37,13 +37,13 @@
             <div class="divclass mt-12">
                 <div>STR1. {{T0006}}</div>
                 <div>
-                    <input type="text" id="str1" name="str1" class="inputclass w-full" />
+                    <input type="text" id="str1" name="str1" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>STR2. {{T0007}}</div>
                 <div>
-                    <input type="text" id="str2" name="str2" class="inputclass w-full" />
+                    <input type="text" id="str2" name="str2" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
@@ -106,33 +106,33 @@
             <div class="divclass mt-4">
                 <div>OMR1. {{T0026}}</div>
                 <div>
-                    <input type="text" id="omr1" name="omr1" class="inputclass w-full" />
+                    <input type="text" id="omr1" name="omr1" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-4">
                 <div>OMR2. {{T0027}}</div>
                 <div>
-                    <input type="text" id="omr2" name="omr2" class="inputclass w-full" />
+                    <input type="text" id="omr2" name="omr2" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-4">
                 <div>OMR3. {{T0028}}</div>
                 <div>
-                    <input type="text" id="omr3" name="omr3" class="inputclass w-full" />
+                    <input type="text" id="omr3" name="omr3" class="inputclass block w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-4">
                 <div>OMR4. {{T0029}}</div>
                 <div>
-                    <input type="text" id="omr4" name="omr4" class="inputclass w-full" />
+                    <input type="text" id="omr4" name="omr4" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-4">
                 <div>
                     OMR5. {{T0030}}</div>
                 <div>
-                    <input type="text" id="omr5" name="omr5" class="inputclass w-full" />
+                    <input type="text" id="omr5" name="omr5" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -140,7 +140,7 @@
                 <div>
                     OMR6. {{T0031}}</div>
                 <div>
-                    <input type="text" id="omr6" name="omr6" class="inputclass w-full" />
+                    <input type="text" id="omr6" name="omr6" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -148,7 +148,7 @@
                 <div>
                     OMR7. {{T0032}}</div>
                 <div>
-                    <input type="text" id="omr7" name="omr7" class="inputclass w-full" />
+                    <input type="text" id="omr7" name="omr7" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -158,7 +158,7 @@
             <div class="divclass mt-6">
                 <div>PTR1. {{T0035}}</div>
                 <div>
-                    <input type="text" id="ptr1" name="ptr1" class="inputclass w-full" />
+                    <input type="text" id="ptr1" name="ptr1" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -167,19 +167,19 @@
             <div class="divclass mt-6">
                 <div>PTR2a. {{T0037}}</div>
                 <div>
-                    <input type="text" id="ptr2a" name="ptr2a" class="inputclass w-full" />
+                    <input type="text" id="ptr2a" name="ptr2a" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>PTR2b. {{T0038}}</div>
                 <div>
-                    <input type="text" id="ptr2b" name="ptr2b" class="inputclass w-full" />
+                    <input type="text" id="ptr2b" name="ptr2b" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>PTR2c. {{T0039}}</div>
                 <div>
-                    <input type="text" id="ptr2c" name="ptr2c" class="inputclass w-full" />
+                    <input type="text" id="ptr2c" name="ptr2c" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
@@ -198,7 +198,7 @@
             <div class="divclass mt-6">
                 <div>PTR4. {{T0043}}</div>
                 <div>
-                    <input type="text" id="ptr4" name="ptr4" class="inputclass w-full" />
+                    <input type="text" id="ptr4" name="ptr4" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
@@ -206,7 +206,7 @@
                     <p>PTR4a. {{T0044}}</p>
                 </div>
                 <div>
-                    <input type="text" id="ptr4a" name="ptr4a" class="inputclass w-full" />
+                    <input type="text" id="ptr4a" name="ptr4a" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -245,13 +245,13 @@
                 </div>
             </div>
 
-            <input type="hidden" id="ptr5e" name="ptr5e" class="inputclass w-full" />
+            <input type="hidden" id="ptr5e" name="ptr5e" class="inputclass block w-full" />
 
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>PTR6. {{T0052}}</div>
                 <div>
-                    <input type="text" id="ptr6" name="ptr6" class="inputclass w-full" />
+                    <input type="text" id="ptr6" name="ptr6" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -288,7 +288,7 @@
                         <label for="ptr7-7" class="labelclass">{{T0060}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="text" id="ptr7_other" name="ptr7_other" class="inputclass w-full" />
+                        <input type="text" id="ptr7_other" name="ptr7_other" class="inputclass block w-full" />
                     </div>
                     <div class="flex items-center">
                         <input id="ptr7-8" type="radio" value="{{ptr7-8}}" name="ptr7" class="valueclass" />
@@ -321,7 +321,7 @@
                         <label for="ptr8-5" class="labelclass">{{T0067}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="text" id="ptr8_other" name="ptr8_other" class="inputclass w-full" />
+                        <input type="text" id="ptr8_other" name="ptr8_other" class="inputclass block w-full" />
                     </div>
                     <div class="flex items-center">
                         <input id="ptr8-6" type="radio" value="{{ptr8-6}}" name="ptr8" class="valueclass" />
@@ -334,21 +334,21 @@
             <div class="divclass mt-6">
                 <div>a. {{T0073}}</div>
                 <div class="flex items-center">
-                    <input type="text" id="ptr8a" name="ptr8a" class="inputclass w-full" />
+                    <input type="text" id="ptr8a" name="ptr8a" class="inputclass block w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>b. {{T0074}}</div>
                 <div class="flex items-center">
-                    <input type="text" id="ptr8b" name="ptr8b" class="inputclass w-full" />
+                    <input type="text" id="ptr8b" name="ptr8b" class="inputclass block w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>c. {{T0075}}</div>
                 <div class="flex items-center">
-                    <input type="text" id="ptr8c" name="ptr8c" class="inputclass w-full" />
+                    <input type="text" id="ptr8c" name="ptr8c" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -379,19 +379,19 @@
                 </div>
             </div>
 
-            <input type="hidden" id="ptr8h" name="ptr8h" class="inputclass w-full" />
+            <input type="hidden" id="ptr8h" name="ptr8h" class="inputclass block w-full" />
 
             <div class="divclass mt-6">
                 <div>PTR9. {{T0083}}</div>
                 <div class="flex items-center">
-                    <textarea id="ptr9" name="ptr9" class="inputclass w-full"></textarea>
+                    <textarea id="ptr9" name="ptr9" class="inputclass block w-full"></textarea>
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>PTR10. {{T0084}}</div>
                 <div class="flex items-center">
-                    <textarea id="ptr10" name="ptr10" class="inputclass w-full"></textarea>
+                    <textarea id="ptr10" name="ptr10" class="inputclass block w-full"></textarea>
                 </div>
             </div>
 
@@ -400,7 +400,7 @@
             <div class="divclass mt-6">
                 <div>{{T0090}}. {{T0091}}</div>
                 <div class="flex gap-4">
-                    <textarea id="obs" name="obs" class="inputclass w-full"></textarea>
+                    <textarea id="obs" name="obs" class="inputclass block w-full"></textarea>
                 </div>
             </div>
 
