--- a/src/templates/R/09_eef.html
+++ b/src/templates/R/09_eef.html
@@ -40,13 +40,13 @@
             <div class="divclass mt-6">
                 <div>{{T0010}}. {{T0011}}</div>
                 <div>
-                    <input type="text" id="q1" name="q1" class="inputclass w-full" />
+                    <input type="text" id="q1" name="q1" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="divclass mt-6">
                 <div>{{T0012}}: {{T0013}}</div>
                 <div>
-                    <input type="text" id="q2" name="q2" class="inputclass w-full" />
+                    <input type="text" id="q2" name="q2" class="inputclass block w-full" />
                 </div>
             </div>
 
@@ -61,14 +61,14 @@
             <div class="divclass mt-6">
                 <div>{{T0016}}. {{T0017}}</div>
                 <div>
-                    <input type="text" id="i1" name="i1" class="inputclass w-full" />
+                    <input type="text" id="i1" name="i1" class="inputclass block w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>{{T0018}}. {{T0019}}</div>
                 <div>
-                    <input type="text" id="i3" name="i3" class="inputclass w-full" />
+                    <input type="text" id="i3" name="i3" class="inputclass block w-full" />
                 </div>
             </div>
 
