--- a/src/templates/R/05_yplcs.html
+++ b/src/templates/R/05_yplcs.html
@@ -75,9 +75,7 @@
             </div>
 
             <div class="divclass mt-4">
-                <div>
-                    {{T0020}}. {{T0021}} <small class="block italic text-red-500">{{T0022}}</small>
-                </div>
+                <div>{{T0020}}. {{T0021}}</div>
                 <div>
                     <input type="text" id="omr4" name="omr4" class="inputclass block w-full" />
                 </div>
@@ -323,7 +321,7 @@
             </div>
 
             <p>{{T0107}}</p>
-            <div class="divclass">
+            <div class="divclass mt-6">
                 <div class="ml-4">{{T0109}}</div>
                 <div>
                     <select id="pi9c" name="pi9c" class="selectclass">
@@ -332,7 +330,7 @@
                 </div>
             </div>
 
-            <div class="divclass">
+            <div class="divclass mt-6">
                 <div class="ml-4">{{T0111}}</div>
                 <div>
                     <select id="pi9d" name="pi9d" class="selectclass">
@@ -340,7 +338,7 @@
                     </select>
                 </div>
             </div>
-            <div class="divclass">
+            <div class="divclass mt-6">
                 <div class="ml-4">h. {{T0591}}</div>
                 <div>
                     <select id="pi9h" name="pi9h" class="selectclass">
