--- a/src/templates/R/01_cpis.html
+++ b/src/templates/R/01_cpis.html
@@ -210,9 +210,18 @@
                 </div>
             </div>
             <div class="divclass mt-6">
-                <div>LK14d. {{T1486}}</div>
+                <div>{{T1485}}. {{T1486}}</div>
                 <div>
                     <select id="lk14d" name="lk14d" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
+
+                </div>
+            </div>
+            <div class="divclass mt-6">
+                <div>{{T1577}}. {{T1578}}</div>
+                <div>
+                    <select id="lk14m" name="lk14m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
                     </select>
 
@@ -441,6 +450,15 @@
                 <div>CM3d. {{T1486}}</div>
                 <div>
                     <select id="cm3d" name="cm3d" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
+
+                </div>
+            </div>
+            <div class="divclass mt-6">
+                <div>{{T1579}}. {{T1580}}</div>
+                <div>
+                    <select id="cm3m" name="cm3m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
                     </select>
 
@@ -986,6 +1004,15 @@
 
                 </div>
             </div>
+            <div class="divclass mt-6">
+                <div>{{T1581}}. {{T1582}}</div>
+                <div>
+                    <select id="cm10m" name="cm10m" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
+
+                </div>
+            </div>
 
             <input type="hidden" id="cm10f" name="cm10f" />
 
@@ -1038,6 +1065,15 @@
                 <div>e. {{T1486}}</div>
                 <div>
                     <select id="cm11e" name="cm11e" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="divclass mt-6">
+                <div>{{T1583}}. {{T1584}}</div>
+                <div>
+                    <select id="cm11m" name="cm11m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
                     </select>
 
@@ -1238,6 +1274,16 @@
                 <div>CT3d. {{T1486}}</div>
                 <div>
                     <select id="ct3d" name="ct3d" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
+
+                </div>
+            </div>
+
+            <div class="divclass mt-6">
+                <div>{{T1585}}. {{T1586}}</div>
+                <div>
+                    <select id="ct3m" name="ct3m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
                     </select>
 
@@ -1780,6 +1826,16 @@
                 </div>
             </div>
 
+            <div class="divclass mt-6">
+                <div>{{T1587}}. {{T1588}}</div>
+                <div>
+                    <select id="ct10m" name="ct10m" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
+
+                </div>
+            </div>
+
             <input type="hidden" id="ct10f" name="ct10f" />
 
             <div class="divclass mt-10">
@@ -1833,7 +1889,15 @@
                     <select id="ct11e" name="ct11e" class="selectclass">
                         <option value="-9">{{T1511}}</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="divclass mt-6">
+                <div>{{T1589}}. {{T1590}}</div>
+                <div>
+                    <select id="ct11m" name="ct11m" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
                 </div>
             </div>
 
@@ -2529,7 +2593,15 @@
                     <select id="cg10e" name="cg10e" class="selectclass">
                         <option value="-9">{{T1511}}</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="divclass mt-6">
+                <div>{{T1591}}. {{T1592}}</div>
+                <div>
+                    <select id="cg10m" name="cg10m" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
                 </div>
             </div>
 
@@ -2581,7 +2653,15 @@
                     <select id="cg11e" name="cg11e" class="selectclass">
                         <option value="-9">{{T1511}}</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="divclass mt-6">
+                <div>{{T1593}}. {{T1594}}</div>
+                <div>
+                    <select id="cg11m" name="cg11m" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
                 </div>
             </div>
 
@@ -2677,6 +2757,15 @@
                 <div>SA3c. {{T1486}}</div>
                 <div>
                     <select id="sa3c" name="sa3c" class="selectclass">
+                        <option value="-9">{{T1511}}</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="divclass mt-6">
+                <div>{{T1595}}. {{T1596}}</div>
+                <div>
+                    <select id="sa3m" name="sa3m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
                     </select>
                 </div>
