--- a/src/templates/R/02_cibs.html
+++ b/src/templates/R/02_cibs.html
@@ -231,6 +231,15 @@
                 </div>
             </div>
 
+            <div class="divclass mt-6">
+                <div>{{T1374}}. {{T1375}}</div>
+                <div>
+                    <select id="lk14m" name="lk14m" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
+                    </select>
+                </div>
+            </div>
+
             <input type="hidden" id="lk14e" name="lk14e" />
 
 
@@ -411,6 +420,15 @@
                 <div>SA3c. {{T1332}}</div>
                 <div>
                     <select id="sa3c" name="sa3c" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="divclass mt-6">
+                <div>{{T1376}}. {{T1377}}</div>
+                <div>
+                    <select id="sa3m" name="sa3m" class="selectclass">
                         <option value="-9">{{T1337}}</option>
                     </select>
                 </div>
@@ -751,7 +769,15 @@
                     <select id="cm3d" name="cm3d" class="selectclass">
                         <option value="-9">{{T1337}}</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="divclass mt-6">
+                <div>{{T1378}}. {{T1379}}</div>
+                <div>
+                    <select id="cm3m" name="cm3m" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
+                    </select>
                 </div>
             </div>
 
@@ -1099,7 +1125,15 @@
                     <select id="cm11e" name="cm11e" class="selectclass">
                         <option value="-9">{{T1337}}</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="divclass mt-6">
+                <div>{{T1380}}. {{T1381}}</div>
+                <div>
+                    <select id="cm11m" name="cm11m" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
+                    </select>
                 </div>
             </div>
 
@@ -1259,6 +1293,15 @@
                 <div>CT3d. {{T1332}}</div>
                 <div>
                     <select id="ct3d" name="ct3d" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="divclass mt-6">
+                <div>{{T1382}}. {{T1383}}</div>
+                <div>
+                    <select id="ct3m" name="ct3m" class="selectclass">
                         <option value="-9">{{T1337}}</option>
                     </select>
                 </div>
@@ -1610,7 +1653,15 @@
                     <select id="ct11e" name="ct11e" class="selectclass">
                         <option value="-9">{{T1337}}</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="divclass mt-6">
+                <div>{{T1384}}. {{T1385}}</div>
+                <div>
+                    <select id="ct11m" name="ct11m" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
+                    </select>
                 </div>
             </div>
 
@@ -2090,7 +2141,15 @@
                     <select id="cg11e" name="cg11e" class="selectclass">
                         <option value="-9">{{T1337}}</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="divclass mt-6">
+                <div>{{T1386}}. {{T1387}}</div>
+                <div>
+                    <select id="cg11m" name="cg11m" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
+                    </select>
                 </div>
             </div>
 
