--- a/src/templates/R/04_qmr.html
+++ b/src/templates/R/04_qmr.html
@@ -116,6 +116,15 @@
                     </select>
                 </div>
             </div>
+            <div class="divclass mt-6">
+                <div>{{T0767}}. {{T0768}}</div>
+                <div>
+                    <select id="i4m" name="i4m"
+                        class="selectclass">
+                        <option value="--" selected>--</option>
+                    </select>
+                </div>
+            </div>
 
             <input type="hidden" id="i4d" name="i4d" />
 
