--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -129,24 +129,21 @@
                 </div>
             </div>
             <div class="divclass mt-4">
-                <div>
-                    OMR5. {{T0030}}</div>
+                <div>OMR5. {{T0030}}</div>
                 <div>
                     <input type="text" id="omr5" name="omr5" class="inputclass block w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-4">
-                <div>
-                    OMR6. {{T0031}}</div>
+                <div>OMR6. {{T0031}}</div>
                 <div>
                     <input type="text" id="omr6" name="omr6" class="inputclass block w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-4">
-                <div>
-                    OMR7. {{T0032}}</div>
+                <div>OMR7. {{T0032}}</div>
                 <div>
                     <input type="text" id="omr7" name="omr7" class="inputclass block w-full" />
                 </div>
@@ -241,7 +238,14 @@
                     <select id="ptr5d" name="ptr5d" class="selectclass">
                         <option value="-9">{{T0089}}</option>
                     </select>
-
+                </div>
+            </div>
+            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+                <div>{{T0094}}. {{T0095}}</div>
+                <div>
+                    <select id="ptr5m" name="ptr5m" class="selectclass">
+                        <option value="-9">{{T0089}}</option>
+                    </select>
                 </div>
             </div>
 
@@ -376,6 +380,14 @@
                         <option value="-9">{{T0089}}</option>
                     </select>
 
+                </div>
+            </div>
+            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+                <div>{{T0096}}. {{T0097}}</div>
+                <div>
+                    <select id="ptr8m" name="ptr8m" class="selectclass">
+                        <option value="-9">{{T0089}}</option>
+                    </select>
                 </div>
             </div>
 
