--- a/src/templates/R/07_ftch.html
+++ b/src/templates/R/07_ftch.html
@@ -122,6 +122,14 @@
                     </select>
                 </div>
             </div>
+            <div class="divclass mt-6">
+                <div>{{T0293}}. {{T0294}}</div>
+                <div>
+                    <select id="ifp1m" name="ifp1m" class="selectclass">
+                        <option value="-9">{{T0271}}</option>
+                    </select>
+                </div>
+            </div>
 
             <input type="hidden" id="ifp1d" name="ifp1d" />
 
