--- a/src/templates/R/08_pfq.html
+++ b/src/templates/R/08_pfq.html
@@ -122,6 +122,14 @@
                     </select>
                 </div>
             </div>
+            <div class="divclass mt-6">
+                <div>{{T0249}}<. {{T0250}}</div>
+                <div>
+                    <select id="pf1m" name="pf1m" class="selectclass">
+                        <option value="-9">{{T0220}}</option>
+                    </select>
+                </div>
+            </div>
 
             <input type="hidden" id="pf1d" name="pf1d" />
 
