--- a/src/templates/R/05_yplcs.html
+++ b/src/templates/R/05_yplcs.html
@@ -201,7 +201,14 @@
                     <select id="pi4d" name="pi4d" class="selectclass">
                         <option value="-9">{{T0597}}</option>
                     </select>
-
+                </div>
+            </div>
+            <div class="divclass mt-6">
+                <div>{{T0603}}. {{T0604}}</div>
+                <div>
+                    <select id="pi4m" name="pi4m" class="selectclass">
+                        <option value="-9">{{T0597}}</option>
+                    </select>
                 </div>
             </div>
 
@@ -345,6 +352,14 @@
                         <option value="-9">{{T0597}}</option>
                     </select>
 
+                </div>
+            </div>
+            <div class="divclass mt-6">
+                <div class="ml-4">m. {{T0606}}</div>
+                <div>
+                    <select id="pi9m" name="pi9m" class="selectclass">
+                        <option value="-9">{{T0597}}</option>
+                    </select>
                 </div>
             </div>
 
