update str4 la I5a

--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -80,7 +80,7 @@
                 <div>STR4. {{T0012}}</div>
                 <div>
                     <select id="str4" name="str4" class="selectclass">
-                        <option value="-9">--</option>
+                        <option value="-9">{{T0089}}</option>
                         <optgroup label="{{T0013}}">
                             <option value="{{str4-1}}">{{T0014}}</option>
                             <option value="{{str4-2}}">{{T0015}}</option>
