--- a/src/templates/R/04_qmr.html
+++ b/src/templates/R/04_qmr.html
@@ -121,7 +121,7 @@
                 <div>
                     <select id="i4m" name="i4m"
                         class="selectclass">
-                        <option value="--" selected>--</option>
+                        <option value="-9">{{T0740}}</option>
                     </select>
                 </div>
             </div>
