rezolvat issues Luisa

--- a/src/templates/R/08_pfq.html
+++ b/src/templates/R/08_pfq.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="divclass mt-6">
-                <div>{{T0249}}<. {{T0250}}</div>
+                <div>{{T0249}}. {{T0250}}</div>
                 <div>
                     <select id="pf1m" name="pf1m" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -435,7 +435,7 @@
             </div>
 
             <div id="c1e" class="hidden divclass mt-6">
-                <div>{{T0114}} {{T0226}}</div>
+                <div>{{T0114}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c1e" name="fc4_c1e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -543,7 +543,7 @@
             </div>
 
             <div id="c2e" class="hidden divclass mt-6">
-                <div>{{T0115}} {{T0226}}</div>
+                <div>{{T0115}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c2e" name="fc4_c2e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -652,7 +652,7 @@
             </div>
 
             <div id="c3e" class="hidden divclass mt-6">
-                <div>{{T0116}} {{T0226}}</div>
+                <div>{{T0116}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c3e" name="fc4_c3e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -762,7 +762,7 @@
             </div>
 
             <div id="c4e" class="hidden divclass mt-6">
-                <div>{{T0117}} {{T0226}}</div>
+                <div>{{T0117}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c4e" name="fc4_c4e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -871,7 +871,7 @@
             </div>
 
             <div id="c5e" class="hidden divclass mt-6">
-                <div>{{T0118}} {{T0226}}</div>
+                <div>{{T0118}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c5e" name="fc4_c5e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -980,7 +980,7 @@
             </div>
 
             <div id="c6e" class="hidden divclass mt-6">
-                <div>{{T0119}} {{T0226}}</div>
+                <div>{{T0119}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c6e" name="fc4_c6e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -1089,7 +1089,7 @@
             </div>
 
             <div id="c7e" class="hidden divclass mt-6">
-                <div>{{T0120}} {{T0226}}</div>
+                <div>{{T0120}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c7e" name="fc4_c7e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -1198,7 +1198,7 @@
             </div>
 
             <div id="c8e" class="hidden divclass mt-6">
-                <div>{{T0121}} {{T0226}}</div>
+                <div>{{T0121}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c8e" name="fc4_c8e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -1307,7 +1307,7 @@
             </div>
 
             <div id="c9e" class="hidden divclass mt-6">
-                <div>{{T0122}} {{T0226}}</div>
+                <div>{{T0122}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c9e" name="fc4_c9e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
@@ -1416,7 +1416,7 @@
             </div>
 
             <div id="c10e" class="hidden divclass mt-6">
-                <div>{{T0123}} {{T0226}}</div>
+                <div>{{T0123}} {{T0109}}</div>
                 <div class="div4class">
                     <select id="fc4_c10e" name="fc4_c10e" class="selectclass">
                         <option value="-9">{{T0220}}</option>
